# new_blog

./: .gitignore  .gitmodules  404.html  README.md  cspell.json  extra.css  index.html  index.md  main.py  mkdocs.yml  requirement.txt  requirements.txt  sitemap.xml  tags.json  todo.md
.skills/post-content/: SKILL.md
DevOps/: index.html
DevOps/aptly/: index.html
DevOps/aptly/custom_repo/: index.html
DevOps/docker/: index.html
DevOps/docker/docker_build_arm/: index.html
DevOps/docker/docker_compose/: index.html
DevOps/docker/docker_host_devices/: index.html
DevOps/docker/docker_images/: index.html
DevOps/docker/docker_issues/: index.html
DevOps/docker/docker_nvidia/: index.html
DevOps/docker/dockerfile_templates/: index.html
DevOps/docker/tips_settings/: index.html
DevOps/git/: index.html
DevOps/git/branching/: index.html
DevOps/git/git_cherrypick/: index.html
DevOps/git/git_diff/: index.html
DevOps/git/git_hooks/: index.html
DevOps/git/git_rebase/: index.html
DevOps/git/git_stash/: index.html
DevOps/git/git_submodule/: index.html
DevOps/git/github/: index.html
DevOps/git/github_action/: index.html
DevOps/git/tips_settings/: index.html
DevOps/linux/: index.html  session.yaml
DevOps/linux/deb_package/: index.html
DevOps/linux/encryption/: index.html
DevOps/linux/hardware/: index.html
DevOps/linux/linux_apt_cheat_sheet/: index.html
DevOps/linux/linux_ip_cheat_sheet/: index.html
DevOps/linux/linux_tmux_tmuxp/: index.html
DevOps/linux/networking/: index.html
DevOps/linux/udev/: index.html
DevOps/networking/: index.html
DevOps/networking/network_netplan/: index.html
DevOps/networking/tips_settings/: index.html
DevOps/networking/tools/: index.html
DevOps/tools/: index.html
DevOps/tools/ansible/: index.html
DevOps/tools/aptly/: index.html
DevOps/tools/devops_debootstrap/: index.html
DevOps/tools/gpg/: index.html
DevOps/tools/terminator/: index.html
DevOps/vscode/: index.html
DevOps/vscode/agents/: index.html
DevOps/vscode/code/: keybindings.json
DevOps/vscode/copilot/: index.html
DevOps/vscode/dev_container/: index.html
DevOps/vscode/extensions/: index.html
DevOps/vscode/mcp/: index.html
DevOps/vscode/remote_ssh/: index.html
DevOps/vscode/tips_settings/: index.html
DevOps/zed/: index.html
Embedded/: index.html
Embedded/ESP32/: index.html
Embedded/ESP32/esp32_mqtt/: index.html
Embedded/ESP32/esp32_simple_foc/: index.html
Embedded/Jetson/: index.html
Embedded/Jetson/build_opencv_with_cuda_support/: index.html
Embedded/RPI/: index.html
Embedded/arduino/: index.html
Embedded/hardware/: index.html
Embedded/linux_toolchains/: index.html
Embedded/micro_python/: index.html
Embedded/other_boards/: index.html
Embedded/sdr/: index.html
Embedded/tiny_ml/: index.html
Other/: index.html
Other/Gstreamer/: index.html
Other/Presentation/: index.html
Other/buy_list/: index.html
Other/cad/: index.html
Other/courses_and_books/: index.html
Other/interview/: index.html
Other/markdown/: index.html
Other/todo/: index.html
Programming/: index.html
Programming/GUI/: index.html
Programming/ai/: index.html
Programming/configure_files/: index.html
Programming/cpp/: index.html
Programming/cpp/gtest/code/: CMakeLists.txt
Programming/cpp/gtest/code/test/: test_demo.cpp
Programming/lua/: index.html
Programming/python/: index.html
Programming/qml/: index.html
Programming/rust/: index.html
Programming/vision/: index.html
ROS/: index.html
ROS/dev_environment/: index.html
ROS/python/: index.html
ROS/ros-micro/: index.html
ROS/ros2_custom_interface/: index.html
ROS/ros2_messages/: index.html
ROS/ros2_resource/: index.html
ROS/ros_basic/: index.html
ROS/ros_cpp/: index.html
ROS/ros_eco/: index.html
ROS/ros_projects/: index.html
ROS/ros_rust/: index.html
ROS/ros_world/: index.html
ROS/ros_world/zenoh/cpp_bindings/code/ros_serial_message/: CMakeLists.txt  pub_sub.cpp
ROS/urdf_xacro/: index.html
ROS/zenoh/: index.html
Robotics/: index.html
Robotics/algorithms/: index.html
Robotics/ardupilot/: index.html
Robotics/control/: index.html
Robotics/filter_and_estimator/: index.html
Robotics/kinematics/: index.html
Robotics/math/: index.html
Robotics/sensors/: index.html
Robotics/slam/: index.html
Robotics/uav/: index.html
Simulation/: index.html
Simulation/Gazebo/: index.html
Simulation/Gazebo_Classic/: index.html
Simulation/PyBullet/: index.html
Simulation/airsim/: index.html
Simulation/blender/: index.html
Simulation/gazebo_ionic/: index.html
Simulation/gazebo_jetty/: index.html
Simulation/godot/: index.html
Simulation/isaac_lab/: index.html
Simulation/nvidia_issac/: index.html
Simulation/osg/: index.html
Simulation/other/: index.html
Simulation/urdf/: index.html
Simulation/vsg/: index.html
Simulation/webots/: index.html
assets/: cpp-runner.js
docs/: extra.css  index.md  todo.md
docs/DevOps/: index.md
docs/Embedded/: index.md
docs/Other/: index.md
docs/Programming/: index.md
docs/Programming/cpp/cmake/cmake_preset/code/: CMakeLists.txt
docs/Programming/cpp/cmake/cmake_preset/code/demo_1/: CMakeLists.txt
docs/Programming/cpp/cmake/cmake_preset/code/include/demo/: lib.hpp
docs/Programming/cpp/cmake/cmake_preset/code/src/: main.cpp
docs/Programming/cpp/cmake/cmake_preset/code/test/: test_add.cpp
docs/Programming/vision/opencv/code/: CMakeLists.txt  hello_cv.cpp
docs/ROS/: index.md  ros2_custom_interface.md
docs/ROS/ros_cpp/code/: CMakeLists.txt  c_cpp_properties.json
docs/ROS/ros_world/zenoh/cpp_bindings/code/zenoh_bridge/: CMakeLists.txt  sub.cpp
docs/Robotics/: index.md
docs/Simulation/: index.md
docs/assets/: cpp.css  mermaid-viewer.css  mermaid-viewer.js
docs/projects/: index.md
overrides/partials/: tags.html
projects/: index.html
search/: search_index.json
submodules/mkdocs_include_uri/: setup.py
todo/: index.html
(+1764 files in other folders)
